--- a/index.html
+++ b/index.html
@@ -117,6 +117,28 @@
               </button>
             </div>
           </div>
+          <div class="project">
+            <div class="project-img">
+              <img
+                src="https://screenshot-proxy.netlify.app/f_avif,w_204/https://d33wubrfki0l68.cloudfront.net/638514e889f6415b6ce8eff5/screenshot_2022-11-28-20-07-08-0000.png"
+                alt=""
+              />
+            </div>
+            <div class="project-disc">
+              <div class="project-title">
+                <h3>Accordion</h3>
+              </div>
+              <p>Accordion was created with ReactJs including TypeScript. Interfaces for props. Types</p>
+
+              <button type="button" class="btn">
+                <a
+                  href="https://euphonious-cobbler-8129ba.netlify.app/"
+                  target="_blank"
+                  >See Project</a
+                >
+              </button>
+            </div>
+          </div>
         </div>
       </div>
     </section>
