--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <div class="project-disc">
               <div class="project-title">
-                <h3>Todo-List</h3>
+                <h3>User-List</h3>
               </div>
               <p>
                 In this project you can add, remove and change users from
@@ -30,7 +30,7 @@
             </div>
             <button type="button" class="btn">
               <a
-                href="https://warm-creponne-4ae576.netlify.app/"
+                href="https://precious-speculoos-055e44.netlify.app/"
                 target="_blank"
                 >See Project</a
               >
